HEADER: Fixed jumping nav arrows. NEWS, CUSTOM-HOMES: Replaced IDs with pretty slugs in URLs.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -882,8 +882,7 @@ footer p {
   .link-mobile-only {
     pointer-events: none;
     cursor: default; }
-  .navbar .nav > li > a:focus:after,
-  .navbar .nav > li > a:hover:after {
+  .current-state:after {
     left: 42%; }
   .footer-bar-left {
     padding-left: 0; }
